sigh, another try fixing gap

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -56,6 +56,7 @@
   padding:30px 20px 50px 20px;
   display: inline-block;
   margin-bottom:-8px;
+  margin-top:-10px;
 }
 
 
@@ -67,7 +68,7 @@
   }
 
   .hero_section{
-    padding: 40px 40px 0px 40px;
+    padding: 40px 40px 15px 40px;
   }
 
 
